chore: temporary backend backup snapshot